web/static/css/main.css
body {
    height: 100%;
    margin: 0 auto;
    padding: 0em;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    line-height: 1.5em;
    background-color: #252525;
}

.container,
.navbar-static-top .container,
.navbar-fixed-top .container,
.navbar-fixed-bottom .container {
  width: 1175px;
}

#top {

    background-color: #000000;
    background-position:center bottom;
    background-repeat:no-repeat;
    height: 470px;
    width: 100%;
    margin: 0;

}

.header {

    background: url(../images/header.jpg);
    height: 845px;
    width: 1175px;
    position: absolute;
    background-repeat:no-repeat;
    top: 0px;
    margin: 0px;

}

.header2 {

    background: url(../images/header2.jpg);
    height: 845px;
    width: 1175px;
    position: absolute;
    background-repeat:no-repeat;
    top: 0px;
    margin: 0px;

}

#font {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: Normal;
    color: #FFFFFF;
    font-size: 16px;
    top: 10px;
    position: relative;
    text-align: left;
    left: 75px;
    width: 1050px;
}

#timeline {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: Normal;
    font-style: Strong;
    color: #FFFFFF;
    font-size: 48px;
    top: -45px;
    position: relative;
    text-align: left;
    left: 75px;
    width: 1050px;
}

#links {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: Normal;
    color: #FFFFFF;
    font-size: 28px;
    top: 125px;
    position: relative;
    text-align: left;
    left: 75px;
    width: 1050px;
}

#bottom {

    background-color: #252525;
    background-position:center bottom;
    background-repeat:no-repeat;
    height: 1000px;
    width: 100%;
    margin: 0;
}

#endlessbottom {

    background-color: #252525;
    background-position:center bottom;
    background-repeat:no-repeat;
    height: 100%;
    width: 100%;
    margin: 0;
}

#center {

    position: relative;
    left: 0px;
    right: 0;
    background: url(../images/center.jpg);
    height: 635px;
    width: 1175px;
    top: -10px;

}

.signin {

    height: 39px;
    width: 244px;
    position: absolute;
    left: 155px;
    top: 275px;


}

.pin {

    height: 75px;
    width: 310px;
    position: relative;
    left: 475px;
    top: -5px;

}

.signout {

    height: 75px;
    width: 185px;
    position: relative;
    left: 925px;
    top: -80px;

}

